tests/errors/codegen/fortran/FORTRAN_ALLOCATABLE_IN_EXPRESSION.py
# pylint: disable=missing-function-docstring, missing-module-docstring/
import numpy as np
a = np.ones(4)*5
